# kamerider

CAD/: Arm Base.SLDPRT  Arm Base.STL  Button Box.SLDPRT  Button Box.STL
DEMO/demo/: package.xml
DEMO/demo/config/: nav_commands.corpus  nav_commands.dic  nav_commands.log_pronounce  nav_commands.vocab
DEMO/demo/src/: demo.py
DEMO/demo_2/: CMakeLists.txt  package.xml
DEMO/devel/: .catkin  .rosinstall  setup.sh
DEMO/src/demo_2/: CMakeLists.txt
TUTORIAL/BASIC_TUTORIAL/Color_tracking/: package.xml  package.xml~
TUTORIAL/BASIC_TUTORIAL/Digital_io/: CMakeLists.txt  package.xml  package.xml~
TUTORIAL/BASIC_TUTORIAL/Turtlebot_arm/: package.xml
TUTORIAL/BASIC_TUTORIAL/Turtlebot_arm/launch/: navi.launch~  turtlebot_arm.launch  turtlebot_arm.launch~
TUTORIAL/BASIC_TUTORIAL/Turtlebot_arm/src/: demo.py~  turtlebot_arm.py~
TUTORIAL/INTERMEDIATE_TUTORIAL/Color_tracking_2/: package.xml  package.xml~
TUTORIAL/INTERMEDIATE_TUTORIAL/Color_tracking_2/launch/: color_tracker_2.launch
TUTORIAL/INTERMEDIATE_TUTORIAL/Color_tracking_2/src/: color_tracker_2.py  color_tracker_2.py~
TUTORIAL/INTERMEDIATE_TUTORIAL/waypoint_navigation_2/: CMakeLists.txt  package.xml
TUTORIAL/INTERMEDIATE_TUTORIAL/waypoint_navigation_2/config/: nav_commands.sent  nav_commands.vocab
TUTORIAL/INTERMEDIATE_TUTORIAL/waypoint_navigation_2/src/: navi_2.py
followme/: CMakeLists.txt  CMakeLists.txt~  package.xml
followme/config/: nav_commands.txt
followme/launch/: main_loop.launch  main_loop.launch~  setwaypoint.launch
followme/src/: 140429_01.py  140429_02.py  combine1.py  combine2.py  combine3.py  follow_me.py  follow_me2.py  follow_me3.py  follow_me4.py  listener.cpp  mover.py  robot_mover.py  stop.py  stop2.py  stop3.py  stop4.py  waypoint2.py  waypoint3.py  waypoint3_1.py  waypoint4.py  waypoint5.py  waypoint_publisher.py
voice_interaction/: package.xml~
voice_interaction/config/: nav_commands.vocab
voice_interaction/launch/: talkback (copy).launch~  talkback.launch~  turtlebot_voice_nav.launch~  voice_interact.launch
voice_interaction/nodes/: talkback.py  talkback.py~  voice_nav.py~
voice_interaction/src/: voice_interact.py
(+145 files in other folders)
