<?xml version="1.0"?>
<package>
  <name>Turtlebot_arm</name>
  <version>1.0.0</version>
  <description> Turtlebot arm will move according to predefined gesture </description>

  <maintainer email="yiploonseow91@gmail.com">seow</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
