<?xml version="1.0"?>
<package>
  <name>Color_tracking_2</name>
  <version>1.0.0</version>
  <description> The robot will roates to find the color that the user defined </description>

  <maintainer email="yiploonseow91@gmail.com">seow</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
